--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,8 +1,15 @@
 {
-  "extends": "tsconfig/nextjs.json",
+  "extends": "@/tsconfig/index.json",
   "compilerOptions": {
     "plugins": [{ "name": "next" }]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
