--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "eslint-config-custom",
+  "name": "@/eslint-config-custom",
   "version": "0.0.0",
   "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "eslint-config-next": "^13.4.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-config-turbo": "^1.9.3"
-  },
+  "license": "UNLICENSED",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@millerknoll-digital/eslint-config-millerknoll-typescript": "0.3.0",
+    "@next/eslint-plugin-next": "^13.4.12",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.46.0",
+    "eslint-config-turbo": "^1.9.3",
+    "eslint-formatter-codeframe": "^7.32.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.6.13",
+    "typescript": "^5.0.2"
   }
 }
