--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,20 +1,36 @@
 {
-  "name": "ui",
+  "name": "@/ui",
   "version": "0.0.0",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
-  "license": "MIT",
+  "main": "./src/index.tsx",
+  "types": "./src/index.tsx",
+  "license": "UNLICENSED",
   "scripts": {
-    "lint": "eslint \"**/*.ts*\"",
+    "type-check": "tsc --pretty --noEmit",
+    "lint": "eslint . --cache --format codeframe --ext .js,.jsx,.mjs,.json,.ts,.tsx",
+    "test": "jest",
+    "clean": "rm -rf .turbo",
     "generate:component": "turbo gen react-component"
   },
+  "dependencies": {
+    "next": "^13.4.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
+    "@/eslint-config-custom": "*",
+    "@/tsconfig": "*",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "^18.5.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "eslint": "^7.32.0",
-    "eslint-config-custom": "*",
-    "react": "^17.0.2",
-    "tsconfig": "*",
-    "typescript": "^4.5.2"
+    "@types/react-test-renderer": "^18.0.0",
+    "autoprefixer": "^10.4.14",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
+    "postcss": "^8.4.27",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.2"
   }
 }
