--- a/turbo.json
+++ b/turbo.json
@@ -2,14 +2,24 @@
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
   "pipeline": {
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**"]
-    },
+    "migrate": {},
     "lint": {},
+    "test": {},
+    "type-check": {
+      "dependsOn": ["topo"]
+    },
+    "build": {
+      "dependsOn": ["^build"]
+    },
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "clean": {
+      "cache": false
+    },
+    "topo": {
+      "dependsOn": ["^topo"]
     }
   }
 }
