ci(web-package): add build deps to web build

--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -11,7 +11,7 @@
       "outputs": ["src/codegen/**"]
     },
     "build": {
-      "dependsOn": ["codegen"],
+      "dependsOn": ["^build", "codegen"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "dev": {
