--- a/apps/styleguide/package.json
+++ b/apps/styleguide/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "storybook dev -p 6006",
-    "build": "storybook build --docs",
+    "build": "storybook build",
     "lint": "eslint . --cache --format codeframe --ext .js,.jsx,.mjs,.json,.ts,.tsx",
     "preview-storybook": "serve storybook-static",
     "clean": "rm -rf .turbo && rm -rf storybook-static"
